# CWasmGame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup_emscripten.sh
src/: main.cpp
